Fix layout change on scrollbar appearing

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,7 @@
     top: 0;
     background-color: rgb(20, 20, 20);
     box-shadow: 0px 3px 3px black;
-    width: 100%;
+    width: 100vw;
     padding-top: 10px;
     padding-bottom: 10px;
     min-height: 5em;
